--- a/_i18n/de.yml
+++ b/_i18n/de.yml
@@ -91,6 +91,12 @@ footer:
   license: >
     Open Knowledge Foundation Deutschland e.V. ist ein gemeinnütziger Verein, Vereinsregister-Nr. VR 30468 B. Die Inhalte dieser Webseite sind, sofern nicht anders angegeben,
     nach <a href="https://creativecommons.org/licenses/by/3.0/de/">Creative Commons 3.0 Attribution</a> lizensiert.
+  piwik_hint: >
+    okfn.de nutzt statt den üblichen externen Dienstleistern die datenschutzfreundlichere Technologie von
+    <a href="https://matomo.org">Matomo</a>, um statistische Auswertungen der Seitennutzung zu erhalten. Wenn sie dies
+    nicht wollen, <a href="https://traffic.okfn.de/index.php?module=CoreAdminHome&amp;action=optOut&amp;language=de">klicken
+    Sie bitte hier und entfernen Sie den Haken</a>. Näheres in <a href="/impressum/#datenschutzerklaerung">unserer
+    Datenschutzerklärung</a>.
 impressum:
   Adresse: Vereinsadresse
   Kontakt: Kontakt
