--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -92,6 +92,11 @@ start:
 footer:
   license: >
     The Open Knowledge Foundation Deutschland (OKF DE) is an independent non-profit organisation registered in Berlin, Germany in 2011 under VR 30468 B. The contents of this website are, if not stated otherwise, licensed with <a href="https://creativecommons.org/licenses/by/3.0/de/">Creative Commons 3.0 Attribution</a>.
+  piwik_hint: >
+    Instead of an external provider okfn.de uses the data-friendly technology of <a href="https://matomo.org">Matamo</a>
+    to create usage statistics for this page. If you do not want this <a href="https://traffic.okfn.de/index.php?module=CoreAdminHome&amp;action=optOut&amp;language="en“>
+    click here</a> and delete the checkmark. Read more in our <a href="/impressum/#datenschutzerklaerung">data privacy
+    statement</a>
 impressum:
   Adresse: Address
   Kontakt: Contact
