--- a/_data/team.yaml
+++ b/_data/team.yaml
@@ -214,6 +214,19 @@
   website:
   github: elisalindinger
 
+- name: Katharina Meyer
+  img: katharinameyer
+  staff: 1
+  board: 0
+  advisory: 0
+  position:
+  bio: "Katharina ist Teil des Prototype Fund-Teams und kümmert sich dort um Kommunikation, Outreach und Weiterentwicklung des Programms. Sie ist Technikhistorikerin, forscht zu sozialen Entwicklungsumgebungen und kuratiert Wissen und Objekte für Museen, Projekte oder Konferenzen wie die re:publica. Sie interessiert sich für die Frage, wie Transdisziplinarität in der Technologieentwicklung zu einer höheren Anwendersensibilität führen kann. 2016 hat Katharina mit einer Kollegin das Projekt Polynocular Tech Lab gestartet, das transdisziplinäre Ansätze in der Hard-, Software- oder Prozessentwicklung befördert und war damit u.a. Fellow am Center for Advanced Internet Studies. In ihrem "ersten Leben" bei der OKFN 2013/14 war Katharina Project Lead bei DARIAH-DE."
+  bio_en: "Katharina ist Teil des Prototype Fund-Teams und kümmert sich dort um Kommunikation, Outreach und Weiterentwicklung des Programms. Sie ist Technikhistorikerin, forscht zu sozialen Entwicklungsumgebungen und kuratiert Wissen und Objekte für Museen, Projekte oder Konferenzen wie die re:publica. Sie interessiert sich für die Frage, wie Transdisziplinarität in der Technologieentwicklung zu einer höheren Anwendersensibilität führen kann. 2016 hat Katharina mit einer Kollegin das Projekt Polynocular Tech Lab gestartet, das transdisziplinäre Ansätze in der Hard-, Software- oder Prozessentwicklung befördert und war damit u.a. Fellow am Center for Advanced Internet Studies. In ihrem "ersten Leben" bei der OKFN 2013/14 war Katharina Project Lead bei DARIAH-DE."
+  mail: katharina.meyer@okfn.de
+  twitter: KthrnMeyer
+  website:
+  github:
+
 - name: Walter Palmetshofer
   img: walterpalmetshofer
   staff: 1
