--- a/_data/team.yaml
+++ b/_data/team.yaml
@@ -363,8 +363,9 @@
 - name: Friedrich Lindenberg
   img: friedrichlindenberg
   staff: 0
-  board: 1
+  board: 0
   advisory: 0
+  board_alumni: 1
   bio: "Friedrich Lindenberg unterstützt Journalisten bei der Auswertung öffentlicher Informationen und programmiert Software zur investigativen Datenanalyse, derzeit bei der Organisation OCCRP. Als Stipendiat der Knight-Stiftung arbeitete er zuletzt für ein Netzwerk von Investigativmedien im südlichen Afrika, davor bei Spiegel Online. Zuvor unterstützte er als Entwickler bei der britischen Open Knowledge Foundation den Aufbau des OpenSpending-Projektes."
   bio_en: "Friedrich Lindenberg supports journalists in the evaluation of public information and programs software for investigative data analysis. As a stipendiary of the Knight Foundation he has recently worked for a network of investigative media in Southern Africa, and before that at SPIEGEL ONLINE. Previously, he supported the British OKF in the crertion of the OpenSpending-Project as a developer."
   mail: friedrich.lindenberg@okfn.de
@@ -375,8 +376,9 @@
 - name: Dr. Christian Heise
   img: christianheise
   staff: 0
-  board: 1
+  board: 0
   advisory: 0
+  board_alumni: 1
   position: Vorsitzender
   bio: "Dr. Christian Heise ist Vorsitzender der Open Knowledge Foundation Deutschland. Er ist Politologe und hat zum Thema Open Science am Centre for Digital Cultures an der Leuphana Universität Lüneburg promoviert. Derzeit ist er Mitglied des Google Digital News Initiative (DNI) Fund Teams. Zuvor war er als Manager bei der Deutschen Presse Agentur und bei ZEIT ONLINE tätig. Neben seiner ehrenamtlichen Tätigkeit im Vorstand der Open Knowledge Foundation ist er auch Gründungs- und Vorstandsmitglied im Förderverein für freie Netzwerke e.V. (freifunk.net)."
   bio_en: "Christian Heise is Manager of the Google Digital News Initiative Innovation Fund in Europe, working on stimulating innovation in the digital news ecosystem and demonstrating new thinking in the practice of digital journalism. He is also PhD Candidate at the Centre for Digital Cultures at Leuphana University Lüneburg, where he has handed in a PhD on Open Science. Previously, he was a manager at Deutsche Presse Agentur and worked at ZEIT ONLINE. Apart from his voluntary engagement in the board of OKF DE he is also founding and board member at Förderverein für Freie Netzwerke e.V. (freifunk.net)."
@@ -465,8 +467,9 @@
   title: Prof. Dr.
   img: soerenauer
   staff: 0
-  board: 1
+  board: 0
   advisory: 0
+  board_alumni: 1
   position: Beisitzer
   bio: "Prof. Dr. Sören Auer leitet den Lehrstuhl Enterprise Information Systems an der Universität Bonn und eine Arbeitsgruppe am Fraunhofer Institut für Analysis und Informationssysteme (IAIS). Er ist Begründer mehrerer international beachteter Forschungs- und Entwicklungsvorhaben wie z.B. des Wikipedia-Semantifizierungs-Projektes DBpedia, der OpenCourseWare-Plattform SlideWiki.org oder des Social Semantic Web Toolkits OntoWiki. Dr. Auer ist Autor von über 100 referierten wissenschaftlichen Publikationen und Organisator vieler wissenschaftlicher Veranstaltungen. Seit 2010 leitet er das im EU RP7 geförderte Forschungsprojekt LOD2 – „Creating Knowledge out of Interlinked Data“. Er arbeitet als Experte für Unternehmen, die Europäische Kommission, das W3C und ist Mitglied des Advisory-Boards der Open Knowledge Foundation."
   bio_en: "Prof. Dr. Sören chairs the professorship Enterprise Information Systems at Universität Bonn and leads a working group at Fraunhofer Institute for Analysis and Information Systems (IAIS). He is founder of several internationally recognized research- and development projects such as the Wikipedia semantification project DBpedia, the OpenCourseWare platform SideWiki.org, or the Social Semantic Web Toolkit OntoWiki. Dr. Auer is author of more than 100 referenced sceintific publications and organiser of several scientific events. He recently lead the EU research project LOD2 - „Creating Knowledge out of Interlinked Data“. He works as an expert for businesses, the European Commission, the W3C, and is member of the advisory board at OKF DE."
@@ -533,7 +536,7 @@
 - name: John David Langlo
   title:
   img: johnlanglo
-  staff: 1
+  staff: 0
   board: 0
   advisory: 0
   position:
