--- a/_data/team.yaml
+++ b/_data/team.yaml
@@ -509,12 +509,13 @@
 - name: Moritz Neujeffski
   title:
   img: moritzneujeffski
-  staff: 1
+  staff: 0
   board: 0
+  board_alumni: 1
   advisory: 0
   position:
-  bio: "Moritz arbeitet im Projekt Datenschule. Er gibt Workshops und unterstützt NGOs in der Datenanalyse und der datengestützten Kampagnenarbeit. Moritz hat an der Universität Maastricht European Studies und Public Policy and Human Development studiert und ist nebenher am Wissenschaftszentrum Berlin aktiv."
-  bio_en: "Moritz works at the School of Data. He gives workshops and supports NGOs in analysing and using data for their campaigning efforts. Moritz has studied European Studies and Public Policy and Human Development at Maastricht University and is also active at the Berlin Social Science Center."
+  bio: "Moritz arbeitete im Projekt Datenschule. Er gab Workshops und unterstützte NGOs in der Datenanalyse und der datengestützten Kampagnenarbeit. Moritz hat an der Universität Maastricht European Studies und Public Policy and Human Development studiert und ist nebenher am Wissenschaftszentrum Berlin aktiv."
+  bio_en: "Moritz worked at the School of Data. He gave workshops and supported NGOs in analysing and using data for their campaigning efforts. Moritz studied European Studies and Public Policy and Human Development at Maastricht University and is also active at the Berlin Social Science Center."
   mail: "moritz.neujeffski@okfn.de"
   twitter: m_neujeffski
   website:
