--- a/_data/team.yaml
+++ b/_data/team.yaml
@@ -837,3 +837,15 @@
   twitter: sonkiki
   website: https://sonjafischbauer.com/
   github: sonjafischbauer
+
+- name: Philip Steffan
+  img: philipsteffan
+  staff: 1
+  board: 0
+  advisory: 0
+  board_alumni: 0
+  position:
+  bio: "Philip ist seit August 2018 bei der Open Knowledge Foundation und kümmert sich als Community-Manager im Projekt Jugend hackt um die Kommunikation. Er war schon immer gerne Erklärbär und hat sich die letzten zehn Jahre in der Makerszene herumgetrieben – als Makerspace-Gründer, Blogger, Technikjournalist und Maker-Faire-Kurator."
+  bio_en: "Philip joined Open Knowledge Foundation Germany in August 2018 as the new Community Manager of Jugend hackt. He's always loved to connect, communicate and explain and has played an important part in the German Maker community in the past years as a makerspace founder, blogger, tech journalist and curator of Maker Faires."
+  mail: philip.steffan@okfn.de
+  twitter: philipsteffan
