--- a/_data/team.yaml
+++ b/_data/team.yaml
@@ -169,8 +169,8 @@
   board: 0
   advisory: 0
   position:
-  bio: "Bela ist Projektleiter von DatenmachenSchule und dem Turing-Bus. Er ist spezialisiert auf Öffentlichkeitsarbeit, Kommunikation und Designaufgaben. Er hat einen Master in „European Studies on Society, Science & Technology“ und arbeitet seit November 2014 bei der Open Knowledge Foundation."
-  bio_en: "Bela project lead of DatenmachenSchule and the Turing-Bus. He specializes in public relations, communication, and graphic design and compiles the monthly OKF newsletter. He holds a degree in European Studies on Society, Science and Technology and joined OKF DE in 2014."
+  bio: "Bela arbeitet bei der Open Knowledge Foundation Deutschland als Projektleiter der Bildungsprojekte „DatenmachenSchule“ und „Turing-Bus“. Als Techniksoziologe interessiert er sich für von der Gesellschaft ausgehende Transformationsprozesse im Bereich der Open Knowledge, Open Source, Open Hardware und Open Education Bewegung, bei denen zivilgesellschaftliche Akteure zu aktiven Mitgestalter*innen werden."
+  bio_en: "Bela works at the Open Knowledge Foundation Germany as project manager of the educational projects "DatenmachenSchule" and "Turing-Bus". As a sociologist of technology he is interested in social transformation processes in the fields of Open Knowledge, Open Source, Open Hardware and Open Education, in which civil society actors become active co-creators*."
   mail: bela.seeger@okfn.de
   twitter: bela_data
   website:
