--- a/_data/team.yaml
+++ b/_data/team.yaml
@@ -173,7 +173,7 @@
   bio_en: "Bela works at the Open Knowledge Foundation Germany as project manager of the educational projects "DatenmachenSchule" and "Turing-Bus". As a sociologist of technology he is interested in social transformation processes in the fields of Open Knowledge, Open Source, Open Hardware and Open Education, in which civil society actors become active co-creators*."
   mail: bela.seeger@okfn.de
   twitter: bela_data
-  website:
+  website: https://github.com/seegerseeger/
 
 - name: Fiona Krakenbürger
   img: fionakrakenbuerger
