--- a/_data/team.yaml
+++ b/_data/team.yaml
@@ -849,3 +849,17 @@
   mail: doris.jantoljak@okfn.de
   twitter:
   website: https://jantoljak.de/
+  
+ 
+- name: Sebastian Schröder
+  title: 
+  img: okf_square
+  staff: 1
+  board: 0
+  advisory: 0
+  position: 
+  bio: "Sebastian Schröder hat schon mehrmals bei »Jugend hackt« teilgenommen und beginnt 2018 seinen Bundesfreiwilligendienst. Dabei wird er das Team von »Jugend hackt« bei der Organisation der Events unterstützen und die verschiedenen Projekte der Open Knowledge Foundation kennenlernen."
+  bio_en: "Sebastian Schröder has already taken part in "Jugend hackt" several times and will start his voluntary service in 2018. He will support the team of »Jugend hackt« in organizing the events and get to know the different projects of the Open Knowledge Foundation."
+  mail: sebastian.schroeder@okfn.de
+  twitter:
+  website:
