--- a/_data/team.yaml
+++ b/_data/team.yaml
@@ -183,8 +183,10 @@
   advisory: 0
   board_alumni: 1
   position:
-  bio: "Fiona ist seit 2014 dabei und betreut und berät als Community Organizerin im Projekt Code for Germany über 20 Open Knowledge Labs in Deutschland. Nebenbei studiert sie Techniksoziologie an der Technischen Universität Berlin. Privat engagiert sie sich seit einigen Jahrem im Bereich der digitalen Alphabetisierung, im Chaos Computer Club und interessiert sich für Gleichberechtigung in der IT. 2016 leitete Fiona das Projekt „Digital Refugee Labs“ im Rahmen von Code for Germany."
-  bio_en: "Fiona has been with OKF DE since 2014 and is Code for Germany's Community Organizer. She supports 20 Open Knowledge Labs together with Julia and Eileen and studies the sociology of technology at the Technical University in Berlin. She has strong ties to a number of different NGOs that are connected to OKF DE's work and has been active in the field of digital literacy for a number of years. In 2016, Fiona will be Project Lead in the Code for Germany project 'Digital Refugee Labs'."
+  bio: "Fiona war von 2014 bis 2018 Teammitglied der OKF und betreute und beriet als Community Organizerin im Projekt Code for Germany über 20 Open Knowledge Labs in Deutschland, später betreute sie als Programm-Managerin die geförderten Projekte im Prototype Fund. Sie ist studierte Techniksoziologin und engagiert sich im Bereich der digitalen Alphabetisierung und Diversität in der Technikentwicklung. 2016 leitete Fiona das Projekt „Digital Refugee Labs“ im Rahmen von Code for Germany, 2017 leitete sie die Wahlsalons."
+  bio_en: "Fiona was a member of the OKF team from 2014 to 2018 and as Community Organizer in the project Code for Germany she supervised and advised more than 20 Open Knowledge Labs in Germany, later as Program Manager she supervised the supported projects in the Prototype Fund. She holds a degree in technical sociology and is involved in the field of digital literacy and diversity in technology development. In 2016, Fiona led the "Digital Refugee Labs" project as part of Code for Germany, and in 2017 she led the Wahlsalons."
+
+Translated with www.DeepL.com/Translator."
   mail: fiona.krakenbuerger@okfn.de
   twitter: Fotografiona
   website: http://arduina.github.io/arduina.net/
